--- a/Trivia/Layouts/Base.lproj/Main.storyboard
+++ b/Trivia/Layouts/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="93N-Kj-ULc">
-                                <rect key="frame" x="90" y="303" width="195" height="60"/>
+                                <rect key="frame" x="90" y="303.5" width="195" height="60"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                                 <size key="titleShadowOffset" width="1" height="1"/>
                                 <state key="normal" title="Start Quiz">
@@ -49,7 +49,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Xdu-ph-IBa"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Quiz" id="s2L-oO-xQ8"/>
+                    <tabBarItem key="tabBarItem" title="Quiz" image="question-sign" id="s2L-oO-xQ8"/>
                     <navigationItem key="navigationItem" id="gGv-J7-zZd"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7HN-hr-BKQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -302,7 +302,7 @@
                             <outlet property="delegate" destination="CL5-LD-bpj" id="K1M-Ao-RJW"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Scores" id="i5w-lf-CiB"/>
+                    <tabBarItem key="tabBarItem" title="Scores" selectedImage="trophy" id="i5w-lf-CiB"/>
                     <navigationItem key="navigationItem" title="Scores" id="LAR-pH-EdP"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fuP-tB-bKE" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -313,7 +313,7 @@
         <scene sceneID="st0-fX-Dkm">
             <objects>
                 <navigationController title="Scores" id="3jB-3u-FHE" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Scores" id="Ry6-eQ-IVS"/>
+                    <tabBarItem key="tabBarItem" title="Scores" image="trophy" id="Ry6-eQ-IVS"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="SBs-nB-P7U">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -349,7 +349,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="nzy-3F-zDx"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Account" id="FUo-Ic-zYz"/>
+                    <tabBarItem key="tabBarItem" title="Account" selectedImage="round-account-button-with-user-inside" id="FUo-Ic-zYz"/>
                     <navigationItem key="navigationItem" title="Account" id="r7f-H9-eDB">
                         <barButtonItem key="rightBarButtonItem" title="Log out" id="S5E-eh-3mL">
                             <connections>
@@ -370,7 +370,7 @@
         <scene sceneID="iGP-7n-H62">
             <objects>
                 <navigationController id="KtG-ky-c0e" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Account" id="eyj-2b-jEQ"/>
+                    <tabBarItem key="tabBarItem" title="Account" image="round-account-button-with-user-inside" id="eyj-2b-jEQ"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="JrT-Fz-ak9">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -382,6 +382,27 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fH9-MR-8kg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="817" y="1155"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="GTq-QA-20o">
+            <objects>
+                <viewController id="iSr-lI-ciF" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bUn-E8-1UL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Trivia" translatesAutoresizingMaskIntoConstraints="NO" id="Xgc-Iv-L4f">
+                                <rect key="frame" x="67" y="269" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.48057440089999998" green="0.80831586239999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <viewLayoutGuide key="safeArea" id="vhi-1Q-JgL"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oC8-hl-fNW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1779" y="-639"/>
         </scene>
         <!--Login-->
         <scene sceneID="lo3-qn-Ija">
@@ -568,5 +589,8 @@
     </scenes>
     <resources>
         <image name="Trivia" width="1531" height="527"/>
+        <image name="question-sign" width="16" height="16"/>
+        <image name="round-account-button-with-user-inside" width="16" height="16"/>
+        <image name="trophy" width="16" height="16"/>
     </resources>
 </document>
